--- a/WeatherForcast/WeatherForcast/Properties/launchSettings.json
+++ b/WeatherForcast/WeatherForcast/Properties/launchSettings.json
@@ -4,25 +4,14 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:7220",
-      "sslPort": 44380
+      "applicationUrl": "http://localhost:51684"
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "WeatherForcast": {
-      "commandName": "Project",
-      "dotnetRunMessages": "true",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "launchUrl": "api/crud/read",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
