--- a/WeatherForcast/WeatherForcast/Properties/launchSettings.json
+++ b/WeatherForcast/WeatherForcast/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": false,
-      "launchUrl": "api/crud/read",
+      "launchUrl": "api/crud/all",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
